# Practical_RL

./: pyproject.toml
week01_intro/: crossentropy_method.ipynb  deep_crossentropy_method.ipynb  seminar_gymnasium_interface.ipynb
week02_value_based/: seminar_vi.ipynb
